5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1885_1599.log
== TEST (2019-07-09 10:20:30) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(v):
	if v[i]> 80.0:
		d = d + v[i] - e
		i = i + 1
		print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:20:41) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(v):
	if v[i]> 80.0:
		d = d + v[i] - e
		i = i + 1
		print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:22:55) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(v):
	if v[i]> 80.0:
		d = d + v[i] - e	
	elif v[i] <= 80.0:
		d = d + v[i]
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:23:46) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(v):
	if v[i]> 80.0:
		d = d + v[i] - e	
	elif v[i] <= 80.0:
		d = d + v[i]
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:24:38) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in v:
	if v[i]> 80.0:
		d = d + v[i] - e	
	elif v[i] <= 80.0:
		d = d + v[i]
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:26:02) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in v:
	if (v[i]> 80.0):
		d = d + v[i] - e	
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:26:41) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in v:
	i = 0
	if (v[i]> 80.0):
		d = d + v[i] - e	
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:27:39) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in v:
	i = 0
	if (v[i]> 80.0):
		d = d + v[i] - e	
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:28:43) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in v:
	i = 0
	if (v[i]> 80.0):
		d = d + v[i] - ((v[i]*15)/100)
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:29:32) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in v:
	i = 0
	d = 0
	if (v[i]> 80.0):
		d = d + v[i] - ((v[i]*15)/100)
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:31:12) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in size(v):
	i = 0
	if (v[i]> 80.0):
		d = d + v[i] - ((v[i]*15)/100)
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:31:22) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in size(v):
	i = 0
	if (v[i]> 80.0):
		d = d + v[i] - ((v[i]*15)/100)
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:32:12) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in v:
	i = 0
	if (v[i]> 80.0):
		d = d + v[i] - ((v[i]*15)/100)
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:32:39) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in v:
	i = 0
	if (v[i]> 80.0):
		d = d + v[i] - ((v[i]*15)/100)
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
	print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:34:18) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(size(v)):
	i = 0
	if (v[i]> 80.0):
		d = d + v[i] - ((v[i]*15)/100)
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
	print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:34:21) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(size(v)):
	i = 0
	if (v[i]> 80.0):
		d = d + v[i] - ((v[i]*15)/100)
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
	print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:34:33) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(size(v)):
	i = 0
	if (v[i]> 80.0):
		d = d + v[i] - ((v[i]*15)/100)
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:35:05) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(size(v)):
	i = 0
	if (v[i]> 80.0):
		d =  v[i] - ((v[i]*15)/100)
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:35:30) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(size(v)):
	i = 0
	if (v[i]> 80.0):
		d =  v[i] - ((v[i]*15)/100) + d
	elif (v[i] <= 80.0):
		d = d + v[i]
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:35:48) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(size(v)):
	i = 0
	if (v[i]> 80.0):
		d =  v[i] - ((v[i]*15)/100) + d
	elif (v[i] <= 80.0):
		d = v[i]
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:36:04) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(size(v)):
	i = 0
	if (v[i]> 80.0):
		d =  v[i] - ((v[i]*15)/100)
	elif (v[i] <= 80.0):
		d = v[i]
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:36:23) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(size(v)):
	i = 0
	if (v[i]> 80.0):
		d =  v[i] - ((v[i]*15)/100) + d
	elif (v[i] <= 80.0):
		d = v[i]
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:37:08) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(size(v)):
	i = 0
	if (v[i]> 80.0):
		d =  v[i] - ((v[i]*15)/100)
	elif (v[i] <= 80.0):
		d = v[i] + d
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:37:42) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(size(v))
	if (v[i]> 80.0):
		d =  v[i] - ((v[i]*15)/100) + d
	elif (v[i] <= 80.0):
		d = v[i] + d
	i = i + 1
print(round(d, 2))
-- ERROR:
File "XXXX", line 6
    for i in range(size(v))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:37:50) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(size(v)):
	if (v[i]> 80.0):
		d =  v[i] - ((v[i]*15)/100) + d
	elif (v[i] <= 80.0):
		d = v[i] + d
	i = i + 1
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 10:38:01) 
-- CODE:
from numpy import*
v = array(eval(input("v: ")))
i = 0
d = 0
e = (v[i]*15)/100
for i in range(size(v)):
	if (v[i]> 80.0):
		d =  v[i] - ((v[i]*15)/100) + d
	elif (v[i] <= 80.0):
		d = v[i] + d
	i = i + 1
print(round(d, 2))
-- EXECUTION TIME:
0.868158
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
